--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Docker login
-        run: echo "${{ secrets.REGISTRY_PASS }}" | docker login ${{ secrets.REGISTRY_URL }} \
-              -u "${{ secrets.REGISTRY_USER }}" --password-stdin
+        run: echo "${{ secrets.REGISTRY_PASS }}" | docker login ${{ secrets.REGISTRY_URL }} -u "${{ secrets.REGISTRY_USER }}" --password-stdin
 
       - name: Build
         run: |
