--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Docker login
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASS }}
-          registry: ${{ secrets.REGISTRY_URL }}
+          username: "${{ secrets.REGISTRY_USER }}"
+          password: "${{ secrets.REGISTRY_PASS }}"
+          registry: "${{ secrets.REGISTRY_URL }}"
 
       - name: Build
         run: |
