--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -10,6 +10,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Проверка, что секреты видны (без вывода пароля!)
+      - name: Check secrets
+        run: |
+          echo "REGISTRY_USER is set: ${{ secrets.REGISTRY_USER }}"
+          echo "REGISTRY_URL is set: ${{ secrets.REGISTRY_URL }}"
+
+      # Docker login через официальный Action
       - name: Docker login
         uses: docker/login-action@v2
         with:
