--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,7 +17,7 @@ jobs:
             echo "REGISTRY_USER is empty!"
             exit 1
           fi
-          if [ -z "${{ secrets.REGISTRY_PASS }}" ]; then
+          if [ -z "${{ secrets.REGISTRY_PASSWORD }}" ]; then
             echo "REGISTRY_PASS is empty!"
             exit 1
           fi
@@ -32,7 +32,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: "${{ secrets.REGISTRY_USER }}"
-          password: "${{ secrets.REGISTRY_PASS }}"
+          password: "${{ secrets.REGISTRY_PASSWORD }}"
           registry: "${{ secrets.REGISTRY_URL }}"
 
       - name: Build
